fix probleme connection (lien perso)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>This is going to be the main page</h1>
+    <h1>Accueil</h1>
     <a href="/cours">Ajouter/Voir les cours</a><br>
     <a href="/profs">Ajouter/Voir les profs</a><br>
     <a href="/etudiant">Ajouter/Voir les etudiants</a><br>
